[gd_scene load_steps=4 format=3 uid="uid://blp6ulybtwgcj"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/nodes/option.gd" id="1_hro80"]
[ext_resource type="Texture2D" uid="uid://b10pucyepsb2s" path="res://addons/dialogue_nodes/icons/Filter.svg" id="1_pklbs"]
[ext_resource type="Texture2D" uid="uid://cf5ef41yo6jl6" path="res://addons/dialogue_nodes/icons/Reload.svg" id="3_e66eu"]

[node name="Option1" type="HBoxContainer" groups=["dialogue_node_options"]]
offset_right = 150.0
offset_bottom = 32.0
script = ExtResource("1_hro80")

[node name="FilterButton" type="Button" parent="."]
visible = false
layout_mode = 2
icon = ExtResource("1_pklbs")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Option Text"

[node name="FilterPanel" type="PopupPanel" parent="."]
position = Vector2i(0, 50)
size = Vector2i(204, 54)

[node name="HBoxContainer" type="HBoxContainer" parent="FilterPanel"]
offset_left = 12.0
offset_top = 12.0
offset_right = 192.0
offset_bottom = 42.0

[node name="Value1" type="LineEdit" parent="FilterPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Value"

[node name="Operator" type="OptionButton" parent="FilterPanel/HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
item_count = 6
popup/item_0/text = "=="
popup/item_0/id = 0
popup/item_1/text = "!="
popup/item_1/id = 1
popup/item_2/text = ">"
popup/item_2/id = 2
popup/item_3/text = "<"
popup/item_3/id = 3
popup/item_4/text = ">="
popup/item_4/id = 4
popup/item_5/text = "<="
popup/item_5/id = 5

[node name="Value2" type="LineEdit" parent="FilterPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Value"

[node name="ResetButton" type="Button" parent="FilterPanel/HBoxContainer"]
visible = false
layout_mode = 2
icon = ExtResource("3_e66eu")
flat = true

[connection signal="pressed" from="FilterButton" to="." method="_on_filter_button_pressed"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_text_focus_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_text_changed"]
[connection signal="text_changed" from="FilterPanel/HBoxContainer/Value1" to="." method="_on_condition_changed"]
[connection signal="item_selected" from="FilterPanel/HBoxContainer/Operator" to="." method="_on_condition_changed"]
[connection signal="text_changed" from="FilterPanel/HBoxContainer/Value2" to="." method="_on_condition_changed"]
[connection signal="pressed" from="FilterPanel/HBoxContainer/ResetButton" to="." method="_on_condition_reset"]
